syntax = "proto3";

package cutetrade.protobuf.common;

import "google/protobuf/timestamp.proto";

option java_package = "cutetrade.protobuf";
option java_outer_classname = "CommonProto";

message Player {
    string name = 1;
    repeated string trade_ids = 2;
}

message Trade {
    string id = 1;
    google.protobuf.Timestamp start_time = 2;
    google.protobuf.Timestamp end_time = 3;

    string red_name = 4;
    string blue_name = 5;

    repeated TradeItem content_history = 6;
    TradeResult trade_result = 7;
}

message TradeItem {
    string item = 1;
    string name = 2;
    repeated string lores = 3;
    int32 count = 4;

    google.protobuf.Timestamp add_time = 5;
    string add_by_name = 6;
}

enum TradeResult {
    TRADE_RESULT_FINISHED = 0;
    TRADE_RESULT_TERMINATED = 1;
    TRADE_RESULT_DEFAULT = 2;
}